--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="icon" type="image/png" href="src/assets/amana-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Amana Flowers</title>
+  <title>Amana Fresh Flowers </title>
 </head>
 
 <body>
